fix: manage copy job lifecycle
